// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders PetitionSummary component when all attributes are verified 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PetitionSummary
    addCredential={[Function]}
    attributes={
      Object {
        "isRequiredAttributeEnabled": true,
        "list": Array [
          Object {
            "object": "Barcelona",
            "predicate": "schema:addressLocality",
            "provenance": Object {
              "credentials": "0123456789",
              "source": "http://atlantis-decode.s3-website-eu-west-1.amazonaws.com",
            },
            "scope": "can-access",
            "subject": "(Alpaca)",
          },
        ],
      }
    }
    bubbleUpRequiredAttributeToggle={[Function]}
    getPetition={[Function]}
    goToSignOutcome={[Function]}
    petition={
      Object {
        "closingDate": "today",
        "description": "world",
        "id": "1234",
        "isEthereum": "false",
        "title": "hello",
      }
    }
    petitionError={undefined}
    petitionLink="http://something.com"
    setSignOutcome={[Function]}
    signPetition={[Function]}
    signSuccess={undefined}
    walletId="something"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <ScrollViewMock>
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <Spinner
              animation="none"
              cancelable={false}
              color="white"
              overlayColor="rgba(0, 0, 0, 0.25)"
              size="large"
              textContent=""
              textStyle={
                Object {
                  "color": "#FFF",
                }
              }
              visible={false}
            />
          </View>
          <View
            style={
              Object {
                "alignSelf": "stretch",
                "backgroundColor": "#FFF",
                "margin": 16,
                "padding": 10,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "rgba(0, 0, 0, 0.87)",
                  "fontSize": 20,
                  "fontWeight": "500",
                  "marginBottom": 20,
                }
              }
            >
              hello
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "rgba(0, 0, 0, 0.87)",
                  "fontSize": 14,
                  "lineHeight": 20,
                  "marginBottom": 15,
                }
              }
            >
              To sign this petition you must consent to sharing the following with Decidim.
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
            >
              This information is anonymised - Decidim will not receive any personally identifying data.
            </Text>
            <Attribute
              buttonCallback={[Function]}
              isEnabled={true}
              isVerified={true}
              toggleCallback={[Function]}
            />
          </View>
        </ScrollViewMock>,
        <Button
          enabled={true}
          name="Yes"
          onPress={[Function]}
          style={Object {}}
        />,
        <Button
          enabled={true}
          name="No"
          onPress={[Function]}
          style={Object {}}
        />,
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          onPress={[Function]}
          style={
            Object {
              "alignSelf": "center",
              "color": "#00F",
              "fontSize": 14,
              "fontWeight": "500",
              "marginVertical": 20,
              "textDecorationLine": "underline",
            }
          }
        >
          Or, cancel signing this petition
        </Text>,
      ],
      "style": Object {
        "backgroundColor": "rgb(246, 246, 246)",
        "flex": 1,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            undefined,
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <Spinner
                animation="none"
                cancelable={false}
                color="white"
                overlayColor="rgba(0, 0, 0, 0.25)"
                size="large"
                textContent=""
                textStyle={
                  Object {
                    "color": "#FFF",
                  }
                }
                visible={false}
              />
            </View>,
            <View
              style={
                Object {
                  "alignSelf": "stretch",
                  "backgroundColor": "#FFF",
                  "margin": 16,
                  "padding": 10,
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "rgba(0, 0, 0, 0.87)",
                    "fontSize": 20,
                    "fontWeight": "500",
                    "marginBottom": 20,
                  }
                }
              >
                hello
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "rgba(0, 0, 0, 0.87)",
                    "fontSize": 14,
                    "lineHeight": 20,
                    "marginBottom": 15,
                  }
                }
              >
                To sign this petition you must consent to sharing the following with Decidim.
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
              >
                This information is anonymised - Decidim will not receive any personally identifying data.
              </Text>
              <Attribute
                buttonCallback={[Function]}
                isEnabled={true}
                isVerified={true}
                toggleCallback={[Function]}
              />
            </View>,
          ],
        },
        "ref": null,
        "rendered": Array [
          undefined,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Spinner
                animation="none"
                cancelable={false}
                color="white"
                overlayColor="rgba(0, 0, 0, 0.25)"
                size="large"
                textContent=""
                textStyle={
                  Object {
                    "color": "#FFF",
                  }
                }
                visible={false}
              />,
              "style": Object {
                "flex": 1,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "animation": "none",
                "cancelable": false,
                "color": "white",
                "overlayColor": "rgba(0, 0, 0, 0.25)",
                "size": "large",
                "textContent": "",
                "textStyle": Object {
                  "color": "#FFF",
                },
                "visible": false,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "rgba(0, 0, 0, 0.87)",
                      "fontSize": 20,
                      "fontWeight": "500",
                      "marginBottom": 20,
                    }
                  }
                >
                  hello
                </Text>,
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "rgba(0, 0, 0, 0.87)",
                      "fontSize": 14,
                      "lineHeight": 20,
                      "marginBottom": 15,
                    }
                  }
                >
                  To sign this petition you must consent to sharing the following with Decidim.
                </Text>,
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                >
                  This information is anonymised - Decidim will not receive any personally identifying data.
                </Text>,
                <Attribute
                  buttonCallback={[Function]}
                  isEnabled={true}
                  isVerified={true}
                  toggleCallback={[Function]}
                />,
              ],
              "style": Object {
                "alignSelf": "stretch",
                "backgroundColor": "#FFF",
                "margin": 16,
                "padding": 10,
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "accessible": true,
                  "allowFontScaling": true,
                  "children": "hello",
                  "ellipsizeMode": "tail",
                  "style": Object {
                    "color": "rgba(0, 0, 0, 0.87)",
                    "fontSize": 20,
                    "fontWeight": "500",
                    "marginBottom": 20,
                  },
                },
                "ref": null,
                "rendered": "hello",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "accessible": true,
                  "allowFontScaling": true,
                  "children": "To sign this petition you must consent to sharing the following with Decidim.",
                  "ellipsizeMode": "tail",
                  "style": Object {
                    "color": "rgba(0, 0, 0, 0.87)",
                    "fontSize": 14,
                    "lineHeight": 20,
                    "marginBottom": 15,
                  },
                },
                "ref": null,
                "rendered": "To sign this petition you must consent to sharing the following with Decidim.",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "accessible": true,
                  "allowFontScaling": true,
                  "children": "This information is anonymised - Decidim will not receive any personally identifying data.",
                  "ellipsizeMode": "tail",
                },
                "ref": null,
                "rendered": "This information is anonymised - Decidim will not receive any personally identifying data.",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "buttonCallback": [Function],
                  "isEnabled": true,
                  "isVerified": true,
                  "toggleCallback": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "enabled": true,
          "name": "Yes",
          "onPress": [Function],
          "style": Object {},
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "enabled": true,
          "name": "No",
          "onPress": [Function],
          "style": Object {},
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "accessible": true,
          "allowFontScaling": true,
          "children": "Or, cancel signing this petition",
          "ellipsizeMode": "tail",
          "onPress": [Function],
          "style": Object {
            "alignSelf": "center",
            "color": "#00F",
            "fontSize": 14,
            "fontWeight": "500",
            "marginVertical": 20,
            "textDecorationLine": "underline",
          },
        },
        "ref": null,
        "rendered": "Or, cancel signing this petition",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <ScrollViewMock>
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <Spinner
                animation="none"
                cancelable={false}
                color="white"
                overlayColor="rgba(0, 0, 0, 0.25)"
                size="large"
                textContent=""
                textStyle={
                  Object {
                    "color": "#FFF",
                  }
                }
                visible={false}
              />
            </View>
            <View
              style={
                Object {
                  "alignSelf": "stretch",
                  "backgroundColor": "#FFF",
                  "margin": 16,
                  "padding": 10,
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "rgba(0, 0, 0, 0.87)",
                    "fontSize": 20,
                    "fontWeight": "500",
                    "marginBottom": 20,
                  }
                }
              >
                hello
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "rgba(0, 0, 0, 0.87)",
                    "fontSize": 14,
                    "lineHeight": 20,
                    "marginBottom": 15,
                  }
                }
              >
                To sign this petition you must consent to sharing the following with Decidim.
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
              >
                This information is anonymised - Decidim will not receive any personally identifying data.
              </Text>
              <Attribute
                buttonCallback={[Function]}
                isEnabled={true}
                isVerified={true}
                toggleCallback={[Function]}
              />
            </View>
          </ScrollViewMock>,
          <Button
            enabled={true}
            name="Yes"
            onPress={[Function]}
            style={Object {}}
          />,
          <Button
            enabled={true}
            name="No"
            onPress={[Function]}
            style={Object {}}
          />,
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            onPress={[Function]}
            style={
              Object {
                "alignSelf": "center",
                "color": "#00F",
                "fontSize": 14,
                "fontWeight": "500",
                "marginVertical": 20,
                "textDecorationLine": "underline",
              }
            }
          >
            Or, cancel signing this petition
          </Text>,
        ],
        "style": Object {
          "backgroundColor": "rgb(246, 246, 246)",
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              undefined,
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <Spinner
                  animation="none"
                  cancelable={false}
                  color="white"
                  overlayColor="rgba(0, 0, 0, 0.25)"
                  size="large"
                  textContent=""
                  textStyle={
                    Object {
                      "color": "#FFF",
                    }
                  }
                  visible={false}
                />
              </View>,
              <View
                style={
                  Object {
                    "alignSelf": "stretch",
                    "backgroundColor": "#FFF",
                    "margin": 16,
                    "padding": 10,
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "rgba(0, 0, 0, 0.87)",
                      "fontSize": 20,
                      "fontWeight": "500",
                      "marginBottom": 20,
                    }
                  }
                >
                  hello
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "rgba(0, 0, 0, 0.87)",
                      "fontSize": 14,
                      "lineHeight": 20,
                      "marginBottom": 15,
                    }
                  }
                >
                  To sign this petition you must consent to sharing the following with Decidim.
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                >
                  This information is anonymised - Decidim will not receive any personally identifying data.
                </Text>
                <Attribute
                  buttonCallback={[Function]}
                  isEnabled={true}
                  isVerified={true}
                  toggleCallback={[Function]}
                />
              </View>,
            ],
          },
          "ref": null,
          "rendered": Array [
            undefined,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Spinner
                  animation="none"
                  cancelable={false}
                  color="white"
                  overlayColor="rgba(0, 0, 0, 0.25)"
                  size="large"
                  textContent=""
                  textStyle={
                    Object {
                      "color": "#FFF",
                    }
                  }
                  visible={false}
                />,
                "style": Object {
                  "flex": 1,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "animation": "none",
                  "cancelable": false,
                  "color": "white",
                  "overlayColor": "rgba(0, 0, 0, 0.25)",
                  "size": "large",
                  "textContent": "",
                  "textStyle": Object {
                    "color": "#FFF",
                  },
                  "visible": false,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Object {
                        "color": "rgba(0, 0, 0, 0.87)",
                        "fontSize": 20,
                        "fontWeight": "500",
                        "marginBottom": 20,
                      }
                    }
                  >
                    hello
                  </Text>,
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Object {
                        "color": "rgba(0, 0, 0, 0.87)",
                        "fontSize": 14,
                        "lineHeight": 20,
                        "marginBottom": 15,
                      }
                    }
                  >
                    To sign this petition you must consent to sharing the following with Decidim.
                  </Text>,
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                  >
                    This information is anonymised - Decidim will not receive any personally identifying data.
                  </Text>,
                  <Attribute
                    buttonCallback={[Function]}
                    isEnabled={true}
                    isVerified={true}
                    toggleCallback={[Function]}
                  />,
                ],
                "style": Object {
                  "alignSelf": "stretch",
                  "backgroundColor": "#FFF",
                  "margin": 16,
                  "padding": 10,
                },
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "accessible": true,
                    "allowFontScaling": true,
                    "children": "hello",
                    "ellipsizeMode": "tail",
                    "style": Object {
                      "color": "rgba(0, 0, 0, 0.87)",
                      "fontSize": 20,
                      "fontWeight": "500",
                      "marginBottom": 20,
                    },
                  },
                  "ref": null,
                  "rendered": "hello",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "accessible": true,
                    "allowFontScaling": true,
                    "children": "To sign this petition you must consent to sharing the following with Decidim.",
                    "ellipsizeMode": "tail",
                    "style": Object {
                      "color": "rgba(0, 0, 0, 0.87)",
                      "fontSize": 14,
                      "lineHeight": 20,
                      "marginBottom": 15,
                    },
                  },
                  "ref": null,
                  "rendered": "To sign this petition you must consent to sharing the following with Decidim.",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "accessible": true,
                    "allowFontScaling": true,
                    "children": "This information is anonymised - Decidim will not receive any personally identifying data.",
                    "ellipsizeMode": "tail",
                  },
                  "ref": null,
                  "rendered": "This information is anonymised - Decidim will not receive any personally identifying data.",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "buttonCallback": [Function],
                    "isEnabled": true,
                    "isVerified": true,
                    "toggleCallback": [Function],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "enabled": true,
            "name": "Yes",
            "onPress": [Function],
            "style": Object {},
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "enabled": true,
            "name": "No",
            "onPress": [Function],
            "style": Object {},
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": "Or, cancel signing this petition",
            "ellipsizeMode": "tail",
            "onPress": [Function],
            "style": Object {
              "alignSelf": "center",
              "color": "#00F",
              "fontSize": 14,
              "fontWeight": "500",
              "marginVertical": 20,
              "textDecorationLine": "underline",
            },
          },
          "ref": null,
          "rendered": "Or, cancel signing this petition",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "context": Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
    },
  },
}
`;

exports[`renders PetitionSummary component when no attributes exist 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PetitionSummary
    addCredential={[Function]}
    attributes={
      Object {
        "isRequiredAttributeEnabled": true,
        "list": Array [],
      }
    }
    bubbleUpRequiredAttributeToggle={[Function]}
    getPetition={[Function]}
    goToSignOutcome={[Function]}
    petition={
      Object {
        "closingDate": "today",
        "description": "world",
        "id": "1234",
        "isEthereum": "false",
        "title": "hello",
      }
    }
    petitionError={undefined}
    petitionLink="http://something.com"
    setSignOutcome={[Function]}
    signPetition={[Function]}
    signSuccess={undefined}
    walletId="something"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <ScrollViewMock>
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <Spinner
              animation="none"
              cancelable={false}
              color="white"
              overlayColor="rgba(0, 0, 0, 0.25)"
              size="large"
              textContent=""
              textStyle={
                Object {
                  "color": "#FFF",
                }
              }
              visible={false}
            />
          </View>
          <View
            style={
              Object {
                "alignSelf": "stretch",
                "backgroundColor": "#FFF",
                "margin": 16,
                "padding": 10,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "rgba(0, 0, 0, 0.87)",
                  "fontSize": 20,
                  "fontWeight": "500",
                  "marginBottom": 20,
                }
              }
            >
              hello
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "rgba(0, 0, 0, 0.87)",
                  "fontSize": 14,
                  "lineHeight": 20,
                  "marginBottom": 15,
                }
              }
            >
              To sign this petition you must consent to sharing the following with Decidim.
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
            >
              This information is anonymised - Decidim will not receive any personally identifying data.
            </Text>
            <Attribute
              buttonCallback={[Function]}
              isEnabled={true}
              isVerified={false}
              toggleCallback={[Function]}
            />
          </View>
        </ScrollViewMock>,
        <Button
          enabled={false}
          name="Yes"
          onPress={[Function]}
          style={Object {}}
        />,
        <Button
          enabled={false}
          name="No"
          onPress={[Function]}
          style={Object {}}
        />,
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          onPress={[Function]}
          style={
            Object {
              "alignSelf": "center",
              "color": "#00F",
              "fontSize": 14,
              "fontWeight": "500",
              "marginVertical": 20,
              "textDecorationLine": "underline",
            }
          }
        >
          Or, cancel signing this petition
        </Text>,
      ],
      "style": Object {
        "backgroundColor": "rgb(246, 246, 246)",
        "flex": 1,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            undefined,
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <Spinner
                animation="none"
                cancelable={false}
                color="white"
                overlayColor="rgba(0, 0, 0, 0.25)"
                size="large"
                textContent=""
                textStyle={
                  Object {
                    "color": "#FFF",
                  }
                }
                visible={false}
              />
            </View>,
            <View
              style={
                Object {
                  "alignSelf": "stretch",
                  "backgroundColor": "#FFF",
                  "margin": 16,
                  "padding": 10,
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "rgba(0, 0, 0, 0.87)",
                    "fontSize": 20,
                    "fontWeight": "500",
                    "marginBottom": 20,
                  }
                }
              >
                hello
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "rgba(0, 0, 0, 0.87)",
                    "fontSize": 14,
                    "lineHeight": 20,
                    "marginBottom": 15,
                  }
                }
              >
                To sign this petition you must consent to sharing the following with Decidim.
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
              >
                This information is anonymised - Decidim will not receive any personally identifying data.
              </Text>
              <Attribute
                buttonCallback={[Function]}
                isEnabled={true}
                isVerified={false}
                toggleCallback={[Function]}
              />
            </View>,
          ],
        },
        "ref": null,
        "rendered": Array [
          undefined,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Spinner
                animation="none"
                cancelable={false}
                color="white"
                overlayColor="rgba(0, 0, 0, 0.25)"
                size="large"
                textContent=""
                textStyle={
                  Object {
                    "color": "#FFF",
                  }
                }
                visible={false}
              />,
              "style": Object {
                "flex": 1,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "animation": "none",
                "cancelable": false,
                "color": "white",
                "overlayColor": "rgba(0, 0, 0, 0.25)",
                "size": "large",
                "textContent": "",
                "textStyle": Object {
                  "color": "#FFF",
                },
                "visible": false,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "rgba(0, 0, 0, 0.87)",
                      "fontSize": 20,
                      "fontWeight": "500",
                      "marginBottom": 20,
                    }
                  }
                >
                  hello
                </Text>,
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "rgba(0, 0, 0, 0.87)",
                      "fontSize": 14,
                      "lineHeight": 20,
                      "marginBottom": 15,
                    }
                  }
                >
                  To sign this petition you must consent to sharing the following with Decidim.
                </Text>,
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                >
                  This information is anonymised - Decidim will not receive any personally identifying data.
                </Text>,
                <Attribute
                  buttonCallback={[Function]}
                  isEnabled={true}
                  isVerified={false}
                  toggleCallback={[Function]}
                />,
              ],
              "style": Object {
                "alignSelf": "stretch",
                "backgroundColor": "#FFF",
                "margin": 16,
                "padding": 10,
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "accessible": true,
                  "allowFontScaling": true,
                  "children": "hello",
                  "ellipsizeMode": "tail",
                  "style": Object {
                    "color": "rgba(0, 0, 0, 0.87)",
                    "fontSize": 20,
                    "fontWeight": "500",
                    "marginBottom": 20,
                  },
                },
                "ref": null,
                "rendered": "hello",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "accessible": true,
                  "allowFontScaling": true,
                  "children": "To sign this petition you must consent to sharing the following with Decidim.",
                  "ellipsizeMode": "tail",
                  "style": Object {
                    "color": "rgba(0, 0, 0, 0.87)",
                    "fontSize": 14,
                    "lineHeight": 20,
                    "marginBottom": 15,
                  },
                },
                "ref": null,
                "rendered": "To sign this petition you must consent to sharing the following with Decidim.",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "accessible": true,
                  "allowFontScaling": true,
                  "children": "This information is anonymised - Decidim will not receive any personally identifying data.",
                  "ellipsizeMode": "tail",
                },
                "ref": null,
                "rendered": "This information is anonymised - Decidim will not receive any personally identifying data.",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "buttonCallback": [Function],
                  "isEnabled": true,
                  "isVerified": false,
                  "toggleCallback": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "enabled": false,
          "name": "Yes",
          "onPress": [Function],
          "style": Object {},
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "enabled": false,
          "name": "No",
          "onPress": [Function],
          "style": Object {},
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "accessible": true,
          "allowFontScaling": true,
          "children": "Or, cancel signing this petition",
          "ellipsizeMode": "tail",
          "onPress": [Function],
          "style": Object {
            "alignSelf": "center",
            "color": "#00F",
            "fontSize": 14,
            "fontWeight": "500",
            "marginVertical": 20,
            "textDecorationLine": "underline",
          },
        },
        "ref": null,
        "rendered": "Or, cancel signing this petition",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <ScrollViewMock>
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <Spinner
                animation="none"
                cancelable={false}
                color="white"
                overlayColor="rgba(0, 0, 0, 0.25)"
                size="large"
                textContent=""
                textStyle={
                  Object {
                    "color": "#FFF",
                  }
                }
                visible={false}
              />
            </View>
            <View
              style={
                Object {
                  "alignSelf": "stretch",
                  "backgroundColor": "#FFF",
                  "margin": 16,
                  "padding": 10,
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "rgba(0, 0, 0, 0.87)",
                    "fontSize": 20,
                    "fontWeight": "500",
                    "marginBottom": 20,
                  }
                }
              >
                hello
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "rgba(0, 0, 0, 0.87)",
                    "fontSize": 14,
                    "lineHeight": 20,
                    "marginBottom": 15,
                  }
                }
              >
                To sign this petition you must consent to sharing the following with Decidim.
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
              >
                This information is anonymised - Decidim will not receive any personally identifying data.
              </Text>
              <Attribute
                buttonCallback={[Function]}
                isEnabled={true}
                isVerified={false}
                toggleCallback={[Function]}
              />
            </View>
          </ScrollViewMock>,
          <Button
            enabled={false}
            name="Yes"
            onPress={[Function]}
            style={Object {}}
          />,
          <Button
            enabled={false}
            name="No"
            onPress={[Function]}
            style={Object {}}
          />,
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            onPress={[Function]}
            style={
              Object {
                "alignSelf": "center",
                "color": "#00F",
                "fontSize": 14,
                "fontWeight": "500",
                "marginVertical": 20,
                "textDecorationLine": "underline",
              }
            }
          >
            Or, cancel signing this petition
          </Text>,
        ],
        "style": Object {
          "backgroundColor": "rgb(246, 246, 246)",
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              undefined,
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <Spinner
                  animation="none"
                  cancelable={false}
                  color="white"
                  overlayColor="rgba(0, 0, 0, 0.25)"
                  size="large"
                  textContent=""
                  textStyle={
                    Object {
                      "color": "#FFF",
                    }
                  }
                  visible={false}
                />
              </View>,
              <View
                style={
                  Object {
                    "alignSelf": "stretch",
                    "backgroundColor": "#FFF",
                    "margin": 16,
                    "padding": 10,
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "rgba(0, 0, 0, 0.87)",
                      "fontSize": 20,
                      "fontWeight": "500",
                      "marginBottom": 20,
                    }
                  }
                >
                  hello
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "rgba(0, 0, 0, 0.87)",
                      "fontSize": 14,
                      "lineHeight": 20,
                      "marginBottom": 15,
                    }
                  }
                >
                  To sign this petition you must consent to sharing the following with Decidim.
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                >
                  This information is anonymised - Decidim will not receive any personally identifying data.
                </Text>
                <Attribute
                  buttonCallback={[Function]}
                  isEnabled={true}
                  isVerified={false}
                  toggleCallback={[Function]}
                />
              </View>,
            ],
          },
          "ref": null,
          "rendered": Array [
            undefined,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Spinner
                  animation="none"
                  cancelable={false}
                  color="white"
                  overlayColor="rgba(0, 0, 0, 0.25)"
                  size="large"
                  textContent=""
                  textStyle={
                    Object {
                      "color": "#FFF",
                    }
                  }
                  visible={false}
                />,
                "style": Object {
                  "flex": 1,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "animation": "none",
                  "cancelable": false,
                  "color": "white",
                  "overlayColor": "rgba(0, 0, 0, 0.25)",
                  "size": "large",
                  "textContent": "",
                  "textStyle": Object {
                    "color": "#FFF",
                  },
                  "visible": false,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Object {
                        "color": "rgba(0, 0, 0, 0.87)",
                        "fontSize": 20,
                        "fontWeight": "500",
                        "marginBottom": 20,
                      }
                    }
                  >
                    hello
                  </Text>,
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Object {
                        "color": "rgba(0, 0, 0, 0.87)",
                        "fontSize": 14,
                        "lineHeight": 20,
                        "marginBottom": 15,
                      }
                    }
                  >
                    To sign this petition you must consent to sharing the following with Decidim.
                  </Text>,
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                  >
                    This information is anonymised - Decidim will not receive any personally identifying data.
                  </Text>,
                  <Attribute
                    buttonCallback={[Function]}
                    isEnabled={true}
                    isVerified={false}
                    toggleCallback={[Function]}
                  />,
                ],
                "style": Object {
                  "alignSelf": "stretch",
                  "backgroundColor": "#FFF",
                  "margin": 16,
                  "padding": 10,
                },
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "accessible": true,
                    "allowFontScaling": true,
                    "children": "hello",
                    "ellipsizeMode": "tail",
                    "style": Object {
                      "color": "rgba(0, 0, 0, 0.87)",
                      "fontSize": 20,
                      "fontWeight": "500",
                      "marginBottom": 20,
                    },
                  },
                  "ref": null,
                  "rendered": "hello",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "accessible": true,
                    "allowFontScaling": true,
                    "children": "To sign this petition you must consent to sharing the following with Decidim.",
                    "ellipsizeMode": "tail",
                    "style": Object {
                      "color": "rgba(0, 0, 0, 0.87)",
                      "fontSize": 14,
                      "lineHeight": 20,
                      "marginBottom": 15,
                    },
                  },
                  "ref": null,
                  "rendered": "To sign this petition you must consent to sharing the following with Decidim.",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "accessible": true,
                    "allowFontScaling": true,
                    "children": "This information is anonymised - Decidim will not receive any personally identifying data.",
                    "ellipsizeMode": "tail",
                  },
                  "ref": null,
                  "rendered": "This information is anonymised - Decidim will not receive any personally identifying data.",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "buttonCallback": [Function],
                    "isEnabled": true,
                    "isVerified": false,
                    "toggleCallback": [Function],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "enabled": false,
            "name": "Yes",
            "onPress": [Function],
            "style": Object {},
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "enabled": false,
            "name": "No",
            "onPress": [Function],
            "style": Object {},
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": "Or, cancel signing this petition",
            "ellipsizeMode": "tail",
            "onPress": [Function],
            "style": Object {
              "alignSelf": "center",
              "color": "#00F",
              "fontSize": 14,
              "fontWeight": "500",
              "marginVertical": 20,
              "textDecorationLine": "underline",
            },
          },
          "ref": null,
          "rendered": "Or, cancel signing this petition",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "context": Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
    },
  },
}
`;
